# tiramisu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: cmake-multi-platform.yml
autograd/: CMakeLists.txt  README.md
autograd/include/tiramisu/autograd/: grad_mode.hpp  gradcheck.hpp  ops.hpp
autograd/src/: grad_mode.cpp  gradcheck.cpp  ops.cpp
bench/: README.md
core/: CMakeLists.txt
core/include/tiramisu/core/: cuda_common.hpp  cuda_memory.hpp  device.hpp  dtype.hpp  node.hpp  ops.hpp  storage.hpp  tensor.hpp  version.hpp
core/src/: cuda_common.cpp  cuda_memory.cpp  cuda_memory.cu  dtype.cpp  ops.cpp  storage.cpp  tensor.cpp  version.cpp
docs/: BUILDING_TIRAMISU.md  BUILDING_TIRAMISU.tex  WIKI.md
examples/: CMakeLists.txt  hello_tiramisu.cpp  mnist.cpp  train_shakespeare.cpp
examples/python/: gpt_step.py  linear_forward.py
nn/: CMakeLists.txt  README.md
nn/include/tiramisu/nn/: embedding.hpp  feed_forward.hpp  gpt.hpp  layernorm.hpp  linear.hpp  loss.hpp  module.hpp  multi_head_attention.hpp  parameter.hpp  sequential.hpp  transformer_block.hpp
nn/src/: embedding.cpp  feed_forward.cpp  gpt.cpp  layernorm.cpp  linear.cpp  loss.cpp  module.cpp  multi_head_attention.cpp  parameter.cpp  sequential.cpp  transformer_block.cpp
ops/: CMakeLists.txt
ops/cpu/: broadcast.cpp  elementwise.cpp  embedding.cpp  matmul.cpp  normalization.cpp  reduce.cpp
ops/cuda/: README.md  backward.cu  ops.cu
ops/include/tiramisu/ops/: broadcast.hpp  cuda_ops.hpp  elementwise.hpp  embedding.hpp  matmul.hpp  normalization.hpp  reduce.hpp
optim/: CMakeLists.txt  README.md
optim/include/tiramisu/optim/: adam.hpp  adamw.hpp  grad_clip.hpp  lr_scheduler.hpp  sgd.hpp
optim/src/: adam.cpp  adamw.cpp  grad_clip.cpp  lr_scheduler.cpp  sgd.cpp
python/: CMakeLists.txt  README.md  bindings.cpp
python/tiramisu/: __init__.py  nn.py  optim.py
quant/: README.md
scripts/: plot_training.py  run_10m_training.sh
serialize/: CMakeLists.txt  README.md
serialize/include/tiramisu/serialize/: checkpoint.hpp
serialize/src/: checkpoint.cpp
tests/: CMakeLists.txt
tests/autograd/: autograd.cpp  grad_mode_test.cpp  gradcheck_test.cpp  graph_test.cpp  integration_test.cpp
tests/core/: ops_test.cpp  storage_test.cpp  tensor_autograd_test.cpp  tensor_slice_test.cpp  tensor_test.cpp  version_test.cpp
tests/nn/: embedding_test.cpp  feed_forward_test.cpp  gpt_test.cpp  layernorm_test.cpp  linear_test.cpp  loss_test.cpp  multi_head_attention_test.cpp  nn_test.cpp  sequential_test.cpp  transformer_block_test.cpp
tests/ops/: broadcast_test.cpp  elementwise_test.cpp  matmul_test.cpp  normalization_test.cpp  ops_test.cpp  reduce_test.cpp
tests/optim/: adam_test.cpp  adamw_test.cpp  grad_clip_test.cpp  lr_scheduler_test.cpp  sgd_test.cpp
tests/python/: test_gpt.py  test_linear.py  test_tensor.py
tests/serialize/: checkpoint_test.cpp
