[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[project]
name = "tiramisu"
version = "0.1.0"
description = "ML framework with tensors, autograd, NN modules, optimizers, transformers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]

[tool.scikit-build]
wheel.packages = ["python/tiramisu"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
TIRAMISU_BUILD_PYTHON = "ON"
TIRAMISU_BUILD_TESTS = "OFF"
TIRAMISU_BUILD_EXAMPLES = "OFF"
TIRAMISU_ENABLE_SANITIZERS = "OFF"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
